[gd_scene load_steps=6 format=3 uid="uid://dnmlxhj10b2m2"]

[ext_resource type="Script" uid="uid://ui4junsf0lv0" path="res://Scripts/Suzhe/album_suzhe.gd" id="1_7m5sf"]
[ext_resource type="Texture2D" uid="uid://b61bwy8k20kpg" path="res://assets/scenes/相册.png" id="3_7u26l"]
[ext_resource type="Texture2D" uid="uid://drk8wjlsfaudg" path="res://Sprites/Elements/桌面.png" id="3_p4aho"]
[ext_resource type="Texture2D" uid="uid://bbcioi5egfkuk" path="res://assets/scenes/相册（翻开）.png" id="4_tyw26"]

[sub_resource type="LabelSettings" id="LabelSettings_7m5sf"]
font_size = 32
shadow_color = Color(0, 0, 0, 0.603922)

[node name="album_suzhe" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7m5sf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_p4aho")

[node name="Cover" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 424.0
offset_top = -72.0
offset_right = 1604.0
offset_bottom = 1142.0
mouse_filter = 0
texture = ExtResource("3_7u26l")

[node name="PageContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PageBackground" type="TextureRect" parent="PageContainer"]
layout_mode = 0
offset_left = -3.0
offset_top = -159.0
offset_right = 3187.0
offset_bottom = 2239.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_tyw26")

[node name="PageContent_left" type="Label" parent="PageContainer"]
layout_mode = 0
offset_left = 175.0
offset_top = 790.0
offset_right = 805.0
offset_bottom = 875.0
label_settings = SubResource("LabelSettings_7m5sf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PhotoArea_left" type="TextureRect" parent="PageContainer"]
layout_mode = 0
offset_left = 166.0
offset_top = 267.0
offset_right = 806.0
offset_bottom = 627.0
expand_mode = 5

[node name="PageContent_right" type="Label" parent="PageContainer"]
layout_mode = 0
offset_left = 1115.0
offset_top = 790.0
offset_right = 1741.0
offset_bottom = 868.0
label_settings = SubResource("LabelSettings_7m5sf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PhotoArea_right" type="TextureRect" parent="PageContainer"]
layout_mode = 0
offset_left = 1095.0
offset_top = 267.0
offset_right = 1735.0
offset_bottom = 627.0
expand_mode = 5

[node name="LoadImageButton_left" type="Button" parent="PageContainer"]
layout_mode = 0
offset_left = 167.0
offset_top = 190.0
offset_right = 266.0
offset_bottom = 248.0
text = "选择照片"

[node name="LoadImageButton_right" type="Button" parent="PageContainer"]
layout_mode = 0
offset_left = 1102.0
offset_top = 193.0
offset_right = 1201.0
offset_bottom = 251.0
text = "选择照片"

[node name="PrevButton" type="Button" parent="PageContainer"]
layout_mode = 0
offset_left = 71.0
offset_top = 55.0
offset_right = 167.0
offset_bottom = 127.0
text = "上一页"

[node name="NextButton" type="Button" parent="PageContainer"]
layout_mode = 0
offset_left = 1734.0
offset_top = 86.0
offset_right = 1840.0
offset_bottom = 170.0
text = "下一页"

[node name="CancButton_left" type="Button" parent="PageContainer"]
layout_mode = 0
offset_left = 756.0
offset_top = 190.0
offset_right = 804.0
offset_bottom = 233.0
text = "X
"

[node name="CancButton_right" type="Button" parent="PageContainer"]
layout_mode = 0
offset_left = 1704.0
offset_top = 195.0
offset_right = 1744.0
offset_bottom = 230.0
text = "X"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1726.0
offset_top = 90.0
offset_right = 1842.0
offset_bottom = 159.0
text = "退出相册"

[node name="FileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1

[connection signal="gui_input" from="Cover" to="." method="_on_cover_gui_input"]
[connection signal="pressed" from="PageContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="PageContainer/NextButton" to="." method="_on_next_button_pressed"]
